fix: PRSDM-9875 Callout list numbering alignment

--- a/assets/_sass/_structure.scss
+++ b/assets/_sass/_structure.scss
@@ -545,10 +545,11 @@
   ul {
     padding-left: 40px;
   }
-  
+
   ol {
+    padding-left: 40px;
     margin-bottom: 0;
-  }  
+  }
 }
 
 .archive {
